--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Sona.</h1>
-    <p class = "web-designer">a web designer.</p>
+    <h1>Hi, I'm Sona.</h1>
+    <p class = "web-designer">a web developer.</p>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
@@ -19,7 +19,7 @@
     <div class="profile">
       <img class="pic" src="images/girl_typing.png" alt="girl-img">
       <h2>Hi.</h2>
-      <p class = "intro">I'm a web designer based in San Francisco, California. I have a passion for web design, data science, and statistics.</p>
+      <p class = "intro">I'm a web developer based in San Francisco, California. I have a passion for web design, data science, computer science, math, and statistics.</p>
     </div>
     <hr>
     <div class="skills">
@@ -27,12 +27,12 @@
       <h2>My Skills</h2>
       <div class="skill-row">
         <h3>Web Design</h3>
-        <p>HTML, CSS, Javascript, React, Bootstrap</p>
+        <p>I love making websites! I often use HTML, CSS, Javascript, React, and Bootstrap.</p>
       </div>
       <div class="skill-row">
         <img class="" src="" alt="">
         <h3>Data Science</h3>
-        <p>R, Python, Excel, SQL, Tableau</p>
+        <p>I also love analyzing and studying data in depth. I usually use R, Python, Excel, SQL, and Tableau.</p>
       </div>
     </div>
     <hr>
@@ -40,7 +40,7 @@
       <img class="pic" src="images/redphone.png" alt="">
       <h2>Get In Touch</h2>
       <h3>Let's talk!</h3>
-      <p class = "contact-message">I'm currently available for freelance work and I can help you with your projects.</p>
+      <p class = "contact-message">I'm currently available for freelance work and I can help you with your projects!</p>
       <a class="btn" href="mailto:sonamanvelyan@yahoo.com">CONTACT ME</a>
     </div>
   </div>
