--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>Hi, I'm Sona.</h1>
+    <h1>I'm Sona.</h1>
     <p class = "web-designer">a web developer.</p>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
@@ -18,7 +18,7 @@
   <div class="middle-container">
     <div class="profile">
       <img class="pic" src="images/girl_typing.png" alt="girl-img">
-      <h2>Hi.</h2>
+      <h2>Hi!</h2>
       <p class = "intro">I'm a web developer based in San Francisco, California. I have a passion for web design, data science, computer science, math, and statistics.</p>
     </div>
     <hr>
@@ -40,7 +40,7 @@
       <img class="pic" src="images/redphone.png" alt="">
       <h2>Get In Touch</h2>
       <h3>Let's talk!</h3>
-      <p class = "contact-message">I'm currently available for freelance work and I can help you with your projects!</p>
+      <p class = "contact-message">I'm currently available for freelance work and I can help you with your projects.</p>
       <a class="btn" href="mailto:sonamanvelyan@yahoo.com">CONTACT ME</a>
     </div>
   </div>
